Few little things

--- a/year.html
+++ b/year.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <meta name="author" content="Jordan Valentine">
-    <title>Hot Tweets | Home</title>
+    <title>Hot Tweets | Year</title>
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico" />
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
