--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <meta name="author" content="Jordan Valentine">
-    <title>Hot Tweets | Year</title>
+    <title>Hot Tweets | About Us</title>
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico" />
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
@@ -24,8 +24,8 @@
             <li><a href="day.html">Day</a></li>
             <li><a href="week.html">Week</a></li>
             <li><a href="month.html">Month</a></li>
-            <li class ="current"><a href="year.html">Year</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="year.html">Year</a></li>
+            <li class ="current"><a href="aboutus.html">About Us</a></li>
           </ul>
         </nav>
 
@@ -37,7 +37,7 @@
         <h3>Today's Date is:</h3>
         <p id="date"></p>
         <h1>Hot Tweets</h1>
-        <p>These are the best tweets of the year.</p>
+        <p>Here is some info about us.</p>
         <script src="javascript.js"></script>
       </div>
     </section>
