--- a/month.html
+++ b/month.html
@@ -25,6 +25,7 @@
             <li><a href="week.html">Week</a></li>
             <li class ="current"><a href="month.html">Month</a></li>
             <li><a href="year.html">Year</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
           </ul>
         </nav>
 
@@ -36,7 +37,7 @@
         <h3>Today's Date is:</h3>
         <p id="date"></p>
         <h1>Hot Tweets</h1>
-        <p>It's meme time.</p>
+        <p>These are the best tweets of the month.</p>
         <script src="javascript.js"></script>
       </div>
     </section>
