--- a/aboutus.html
+++ b/aboutus.html
@@ -54,7 +54,7 @@
               <div id="tabs" class="dark">
             <h3 style="font-size: 180%;" class="dark">Our Mission</h3>
             <div class="dark">
-              <p>Hot Tweets mission is to give you memes.</p>
+              <p>Our Mission is to create a website that uses Twitter api to show only the most liked and retweeted posts. It does not show trends of what multiple Twitter users are talking about at any given time. The application would show the most popular tweets of the hour/day/week. The website would be accessible to anyone, even if they don’t have a Twitter account.</p>
           </div>
         </div>
       </div>
